# sdk-generator

./: .coderabbit.yaml  .env  .gitignore  .phpactor.json  .phpunit.result.cache  .travis.yml  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE.md  PHPTests.php  README.md  build.php  buildRust.php  composer.json  example.php  generate-sdk.php  package-lock.json  phpcs.xml  phpunit.xml  pyproject.toml  rebase_todo.txt  rector.php  renovate.json  test-config.json  test.php  test.ts
.github/ISSUE_TEMPLATE/: bug.yaml  documentation.yaml  feature.yaml
.github/scripts/: max-line-length.sh
.github/workflows/: ci.yml  cli-beta-publish.yaml  compatibility.yml  djlint.yml  generate-unity-alf.yml  renovate.yml  sdk-build-validation.yml  tests.yml  validation.yml
examples/: open-api-3-0.json  swagger-2-0.json
examples/CLI/: README.md  composer.json  install.ps1  install.sh
examples/android/: README.md  build.gradle
examples/c++/: README.md
examples/cpp/: CHANGELOG.md  CMakeLists.txt  README.md
examples/cpp/.github/workflows/: publish.yml
examples/cpp/examples/: basic_usage.cpp
examples/cpp/include/appwrite/: appwrite.hpp  base.hpp  client.hpp  core.hpp  models.hpp  services.hpp
examples/cpp/include/appwrite/enums/: enums.hpp
examples/cpp/tests/: integration.cpp  integration_logic.cpp  model_tests.cpp
examples/dart/: .packages  README.md  pubspec.yaml
examples/deno/: README.md  mod.ts
examples/dotnet/: README.md
examples/flutter/: .packages  README.md  pubspec.yaml
examples/go/: README.md  account.go  auth.go  avatars.go  client.go  database.go  functions.go  locale.go  projects.go  storage.go  teams.go  users.go
examples/js/: README.md  package.json
examples/kotlin/: CHANGELOG.md  README.md  build.gradle  settings.gradle
examples/node/: README.md  index.d.ts  index.js  package.json
examples/php/: README.md  composer.json
examples/python/: README.md  setup.py
examples/ruby/: .travis.yml  README.md  appwrite.gemspec
examples/swift/: README.md
examples/swift-client/: README.md
examples/swift-server/: Package.swift
examples/typescript/: README.md  index.ts  package.json
examples/web/: README.md  package.json
examples/zed-extension/: extension.toml
mock-server/: .gitignore  Dockerfile  composer.json  docker-compose.yml
mock-server/app/: http.php  realtime.php
mock/templates/: deno.ts
scratch/: plan_rebase.py
scripts/: update-lockfiles.sh  verify-darwin-signatures.py
specs/: swagger-appwrite-0.12.0.json  swagger-appwrite-0.13.0.json  swagger-appwrite.0.10.0.json  swagger-appwrite.0.12.0.json  swagger-appwrite.0.7.0.json  swagger-appwrite.0.7.2-client.json  swagger-appwrite.0.7.2-server.json  swagger-appwrite.0.8.0.json  swagger-appwrite.0.8.x-client.json  swagger-latest-console.json  swagger2-latest-console.json
src/SDK/: Language.php  SDK.php
src/Spec/: OpenAPI3.php  Spec.php  StaticSpec.php  Swagger2.php
templates/agent-skills/: README.md.twig  android.md.twig  apple.md.twig  cli.md.twig  dart.md.twig  deno.md.twig  dotnet.md.twig  flutter.md.twig  go.md.twig  kotlin.md.twig  node.md.twig  php.md.twig  python.md.twig  react-native.md.twig  ruby.md.twig  rust.md.twig  swift.md.twig  typescript.md.twig  web.md.twig
templates/android/: README.md.twig  build.gradle.kts.twig  build.gradle.twig  settings.gradle  settings.gradle.kts
templates/apple/: Package.swift.twig
templates/c++/: README.md.twig
templates/c++/src/: CMakeLists.txt  client.cpp.twig  client.hpp.twig  exception.cpp.twig  exception.hpp.twig  service.cpp.twig  service.hpp.twig
templates/c++/src/include/: client.hpp.twig  exception.hpp.twig  service.hpp.twig
templates/c++/src/lib/: client.cpp.twig  exception.cpp.twig  service.cpp.twig
templates/c++/src/models/: id.cpp.twig  id.hpp.twig  permission.cpp.twig  permission.hpp.twig  query.cpp.twig  query.hpp.twig
templates/c++/src/services/: service.cpp.twig  service.hpp.twig
templates/claude-plugin/: .mcp.json.twig  README.md.twig  marketplace.json.twig  plugin.json.twig
templates/cli/: .gitignore  .travis.yml.twig  Dockerfile.twig  README.md.twig  appwrite.json.twig  bun-types.d.ts  bun.lock.twig  bunfig.toml  cli.ts.twig  composer.json.twig  eslint.config.js  index.js.twig  index.ts  index.ts.twig  install.ps1.twig  install.sh.twig  package-lock.json.twig  package.json  package.json.twig  tsconfig.json  tsconfig.json.twig
templates/rust/: .gitignore  CHANGELOG.md.twig  Cargo.toml  Cargo.toml.twig  README.md.twig
templates/rust/.github/workflows/: autoclose.yml  cargo-publish.yml  publish.yml.twig  stale.yml
templates/rust/docs/: example.md.twig
templates/rust/examples/: basic_usage.rs.twig  foo_test.rs.twig
templates/rust/src/: client.rs.twig  error.rs.twig  id.rs.twig  input_file.rs.twig  lib.rs  lib.rs.twig  operator.rs.twig  permission.rs.twig  query.rs.twig  role.rs.twig
templates/rust/src/enums/: enum.rs.twig  mod.rs.twig
templates/rust/src/models/: attribute.rs.twig  mod.rs.twig  model.rs.twig  request_model.rs.twig
templates/rust/src/services/: exception.rs.twig  mod.rs.twig  service.rs.twig
templates/rust/tests/: client_creation.rs.twig  localhost_tests.rs.twig  tests.rs
testing_gen/: appwrite.json
tests/: Android11Java11Test.php  Android11Java8Test.php  Android12Java11Test.php  Android12Java8Test.php  Android13Java11Test.php  Android13Java8Test.php  Android14Java11Test.php  Android14Java17JavaTest.php  Android14Java17KotlinTest.php  Android14Java17Test.php  Android14Java8KotlinTest.php  Android14Java8Test.php  Android16Java17Test.php  Android36Java17Test.php  Android5Java11Test.php  Android5Java17KotlinTest.php  Android5Java17Test.php  Android5Java8Test.php  AndroidTest.php  AppleSwift510Test.php  AppleSwift55Test.php  AppleSwift56Test.php  AppleSwift60Test.php  Base.php  CLIBun10Test.php  CLIBun11Test.php  CLIBun13Test.php  CLINode14Test.php  CLINode16Test.php  CLINode18Test.php  CLINode20Test.php  CLITest.php  Cpp20Test.php  Crystal19Test.php  DartBetaTest.php  DartStableTest.php  DartTest.php  Deno1171Test.php  Deno1193Test.php  Deno1303Test.php  (+79 more)
(+3241 files in other folders)
