[package]
name = "rust"
version = "0.1.0"
authors = ["Bradley Schofield <ionicisere@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ureq = { version = "2.0.2", features = ["json"] }
url = "2.2.1"
reqwest = { version = "0.11", features = ["json", "blocking", "multipart"] }
tempfile = "3.2.0"

# Serde
serde = "1.0.124"
serde_derive = "1.0.124"
serde_json = "1.0.64"