[package]
name = "rust"
version = "0.1.0"
authors = ["Bradley Schofield <ionicisere@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
url = "2.2.1"
reqwest = { version = "0.11", features = ["json", "blocking", "multipart"] }

# Serde
serde = "1.0.124"
serde_derive = "1.0.124"
serde_json = "1.0.64"